--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-welcome.message: Hello Mkyong
+welcome.message: Hello Ammar!
 spring.security.user.name= username
 spring.security.user.password=password
 
